data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3609.wast
;; 8. **Test Loop with Function Call**:    - **Description**: Integrate a `call x` instruction within a loop that is theoretically infinite due to incorrect break conditions.    - **Constraint**: Periodic breaks should terminate the loop, but the CFG might have faulty loop detection.    - **Relation to CFG**: A broken CFG might allow an infinite loop without correctly handling the function calls inside it.

(assert_invalid
  (module
    (func $incorrect_loop
      (loop $infinite
        (call 1)
        (br_if $infinite (i32.const 0))
      )
    )
    (func (result i32))
  )
  "incorrect loop handling with call"
)